--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "nuxt3": "latest",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0"
+  },
+  "dependencies": {
+    "vue-yandex-maps": "^0.11.8"
   }
 }
