--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sass-loader": "^12.6.0"
   },
   "dependencies": {
-    "vue-yandex-maps": "^0.11.8"
+    "vue-yandex-maps": "^0.11.8",
+    "vuex": "^4.0.2"
   }
 }
